test/sematest/invalid/undefined_class_type_usage.java
class Test {
  public static void main(String[] args) {}

  public void test () {
    SomeType someType;
    SomeType[] someTypeArray;
  }
}
